objects/vlocity_ins__RuleVariable__c.object
<CustomObject>
    <description>Vlocity Rules operate on declared variables. This represents a declared variable for the parent rule.</description>
    <fields>
        <fullName>vlocity_ins__EntityFilterId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity Filter</label>
        <referenceTo>vlocity_ins__EntityFilter__c</referenceTo>
        <relationshipLabel>Rule Variables</relationshipLabel>
        <relationshipName>RuleVariables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FieldName__c</fullName>
        <label>Field Name to Assign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectIdentifier__c</fullName>
        <description>This field describes the relation between the rule object and the object to be captured as a variable</description>
        <label>Object Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectPath__c</fullName>
        <description>This field describes the relation between the rule object and the object to be captured as a variable</description>
        <label>Object Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RuleId__c</fullName>
        <label>Rule</label>
        <referenceTo>vlocity_ins__Rule__c</referenceTo>
        <relationshipLabel>Rule Variables</relationshipLabel>
        <relationshipName>RuleVariables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List&lt;Sobject&gt;</fullName>
                </value>
                <value>
                    <fullName>List&lt;String&gt;</fullName>
                </value>
                <value>
                    <fullName>List&lt;Id&gt;</fullName>
                </value>
                <value>
                    <fullName>Sobject</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Id</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vlocity Rule Variable</label>
    <nameField>
        <label>Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Rule Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>